:ski: Stop pre blocks from not wrapping

--- a/src/utils/code.scss
+++ b/src/utils/code.scss
@@ -8,3 +8,9 @@ code {
     padding: 4px 5px 6px;
     white-space: nowrap;
 }
+
+pre {
+    code {
+        white-space: pre;
+    }
+}
